--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -1,3 +1,4 @@
+<base href="/" />
 <!doctype html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
@@ -12,6 +13,7 @@
 
 		<link rel="stylesheet" href="stylesheets/app.css" />
 		<script src="javascripts/vendor.js"></script>
+        <script src="config.js"></script>
 		<script src="javascripts/app.js"></script>
 		<script>require('initialize')</script>
 	</head>
