--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -9,7 +9,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<title>Brunch Backbone Boilerplate</title>
+		<title>Dude Boilerplate</title>
 
 		<link rel="stylesheet" href="stylesheets/app.css" />
 		<script src="javascripts/vendor.js"></script>
